
// golek Workflow Engine - gRPC API Definitions
// Package: tech.kayys.golek.v1

syntax = "proto3";

package golek.v1;

option go_package = "tech.kayys.golek/pkg/api/v1;golekv1";
option java_package = "tech.kayys.golek.api.v1";
option java_multiple_files = true;

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/empty.proto";

// ============================================================================
// DEFINITION MESSAGES
// ============================================================================

message CreateDefinitionRequest {
  string tenant_id = 1;
  string name = 2;
  string version = 3;
  string description = 4;
  repeated NodeDefinition nodes = 5;
  map<string, InputDefinition> inputs = 6;
  map<string, OutputDefinition> outputs = 7;
  optional RetryPolicy retry_policy = 8;
  optional CompensationPolicy compensation_policy = 9;
  map<string, string> metadata = 10;
}

message GetDefinitionRequest {
  string tenant_id = 1;
  string definition_id = 2;
}

message UpdateDefinitionRequest {
  string tenant_id = 1;
  string definition_id = 2;
  DefinitionResponse definition = 3;
}

message DeleteDefinitionRequest {
  string tenant_id = 1;
  string definition_id = 2;
}

message ListDefinitionsRequest {
  string tenant_id = 1;
  bool active_only = 2;
}

message ListDefinitionsResponse { repeated DefinitionResponse definitions = 1; }

// ============================================================================
// DOMAIN MODELS
// ============================================================================

// Run Response
message RunResponse {
  string run_id = 1;
  string tenant_id = 2;
  string definition_id = 3;
  RunStatus status = 4;
  google.protobuf.Struct variables = 5;
  map<string, NodeExecution> node_executions = 6;
  repeated string execution_path = 7;
  google.protobuf.Timestamp created_at = 8;
  optional google.protobuf.Timestamp started_at = 9;
  optional google.protobuf.Timestamp completed_at = 10;
  optional int64 duration_ms = 11;
  optional ErrorInfo error = 12;
  map<string, string> labels = 13;
}

// Definition Response
message DefinitionResponse {
  string definition_id = 1;
  string tenant_id = 2;
  string name = 3;
  string version = 4;
  string description = 5;
  repeated NodeDefinition nodes = 6;
  map<string, InputDefinition> inputs = 7;
  map<string, OutputDefinition> outputs = 8;
  optional RetryPolicy retry_policy = 9;
  optional CompensationPolicy compensation_policy = 10;
  map<string, string> metadata = 11;
  google.protobuf.Timestamp created_at = 12;
  bool is_active = 13;
}

// Node Definition
message NodeDefinition {
  string id = 1;
  string name = 2;
  NodeType type = 3;
  string executor_type = 4;
  google.protobuf.Struct config = 5;
  repeated string depends_on = 6;
  repeated Transition transitions = 7;
  optional RetryPolicy retry_policy = 8;
  optional int64 timeout_seconds = 9;
  bool critical = 10;
}

// Node Execution
message NodeExecution {
  string node_id = 1;
  string node_name = 2;
  NodeExecutionStatus status = 3;
  int32 attempt = 4;
  optional google.protobuf.Timestamp started_at = 5;
  optional google.protobuf.Timestamp completed_at = 6;
  google.protobuf.Struct output = 7;
  optional ErrorInfo error = 8;
}

// Transition
message Transition {
  string target_node = 1;
  optional string condition = 2;
  TransitionType type = 3;
}

// Input Definition
message InputDefinition {
  string name = 1;
  string type = 2;
  bool required = 3;
  optional google.protobuf.Value default_value = 4;
  string description = 5;
}

// Output Definition
message OutputDefinition {
  string name = 1;
  string type = 2;
  string description = 3;
}

// Retry Policy
message RetryPolicy {
  int32 max_attempts = 1;
  int64 initial_delay_ms = 2;
  int64 max_delay_ms = 3;
  double backoff_multiplier = 4;
  repeated string retryable_exceptions = 5;
}

// Compensation Policy
message CompensationPolicy {
  CompensationStrategy strategy = 1;
  int32 timeout_seconds = 2;
  bool retry_on_failure = 3;
}

// Error Info
message ErrorInfo {
  string code = 1;
  string message = 2;
  string stack_trace = 3;
  google.protobuf.Struct context = 4;
}

// Execution Event
message ExecutionEvent {
  string event_id = 1;
  string event_type = 2;
  google.protobuf.Timestamp occurred_at = 3;
  string run_id = 4;
  int64 sequence_number = 5;
  google.protobuf.Struct payload = 6;
}

// ============================================================================
// ENUMS
// ============================================================================

enum RunStatus {
  RUN_STATUS_UNSPECIFIED = 0;
  RUN_STATUS_CREATED = 1;
  RUN_STATUS_PENDING = 2;
  RUN_STATUS_RUNNING = 3;
  RUN_STATUS_SUSPENDED = 4;
  RUN_STATUS_COMPLETED = 5;
  RUN_STATUS_FAILED = 6;
  RUN_STATUS_CANCELLED = 7;
  RUN_STATUS_COMPENSATING = 8;
  RUN_STATUS_COMPENSATED = 9;
}

enum NodeExecutionStatus {
  NODE_STATUS_UNSPECIFIED = 0;
  NODE_STATUS_PENDING = 1;
  NODE_STATUS_RUNNING = 2;
  NODE_STATUS_COMPLETED = 3;
  NODE_STATUS_FAILED = 4;
  NODE_STATUS_RETRYING = 5;
  NODE_STATUS_SKIPPED = 6;
}

enum NodeType {
  NODE_TYPE_UNSPECIFIED = 0;
  NODE_TYPE_TASK = 1;
  NODE_TYPE_DECISION = 2;
  NODE_TYPE_PARALLEL = 3;
  NODE_TYPE_AGGREGATE = 4;
  NODE_TYPE_HUMAN_TASK = 5;
  NODE_TYPE_SUB_WORKFLOW = 6;
  NODE_TYPE_EVENT_WAIT = 7;
  NODE_TYPE_TIMER = 8;
  NODE_TYPE_SCRIPT = 9;
  NODE_TYPE_AI_AGENT = 10;
}

enum TransitionType {
  TRANSITION_UNSPECIFIED = 0;
  TRANSITION_SUCCESS = 1;
  TRANSITION_FAILURE = 2;
  TRANSITION_CONDITION = 3;
  TRANSITION_DEFAULT = 4;
}

enum CommunicationType {
  COMMUNICATION_UNSPECIFIED = 0;
  COMMUNICATION_GRPC = 1;
  COMMUNICATION_REST = 2;
  COMMUNICATION_KAFKA = 3;
  COMMUNICATION_NATS = 4;
}

enum TaskStatus {
  TASK_STATUS_UNSPECIFIED = 0;
  TASK_STATUS_PENDING = 1;
  TASK_STATUS_RUNNING = 2;
  TASK_STATUS_COMPLETED = 3;
  TASK_STATUS_FAILED = 4;
}

enum CompensationStrategy {
  COMPENSATION_UNSPECIFIED = 0;
  COMPENSATION_SEQUENTIAL = 1;
  COMPENSATION_PARALLEL = 2;
}