

// golek Workflow Engine - gRPC API Definitions
// Package: tech.kayys.golek.v1

syntax = "proto3";

package golek.v1;

option go_package = "tech.kayys.golek/pkg/api/v1;golekv1";
option java_package = "tech.kayys.golek.api.v1";
option java_multiple_files = true;

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/empty.proto";

// ============================================================================
// EXECUTOR SERVICE - Executor registration and communication
// ============================================================================

service ExecutorService {
  // Executor Registration
  rpc RegisterExecutor(RegisterExecutorRequest) returns (ExecutorRegistration);
  rpc UnregisterExecutor(UnregisterExecutorRequest)
      returns (google.protobuf.Empty);
  rpc Heartbeat(HeartbeatRequest) returns (google.protobuf.Empty);

  // Task Communication
  rpc StreamTasks(StreamTasksRequest) returns (stream ExecutionTask);
  rpc ReportResult(TaskResult) returns (google.protobuf.Empty);

  // Bidirectional Streaming
  rpc ExecuteStream(stream ExecutorMessage) returns (stream EngineMessage);
}

// ============================================================================
// DEFINITION SERVICE - Workflow definition management
// ============================================================================

service DefinitionService {
  rpc CreateDefinition(CreateDefinitionRequest) returns (DefinitionResponse);
  rpc GetDefinition(GetDefinitionRequest) returns (DefinitionResponse);
  rpc UpdateDefinition(UpdateDefinitionRequest) returns (DefinitionResponse);
  rpc DeleteDefinition(DeleteDefinitionRequest) returns (google.protobuf.Empty);
  rpc ListDefinitions(ListDefinitionsRequest) returns (ListDefinitionsResponse);
}

// ============================================================================
// REQUEST/RESPONSE MESSAGES
// ============================================================================

// Create Workflow Run
message CreateRunRequest {
  string tenant_id = 1;
  string definition_id = 2;
  google.protobuf.Struct inputs = 3;
  map<string, string> labels = 4;
}

// Start Workflow Run
message StartRunRequest {
  string tenant_id = 1;
  string run_id = 2;
}

// Get Workflow Run
message GetRunRequest {
  string tenant_id = 1;
  string run_id = 2;
}

// Suspend Workflow Run
message SuspendRunRequest {
  string tenant_id = 1;
  string run_id = 2;
  string reason = 3;
  optional string waiting_on_node_id = 4;
}

// Resume Workflow Run
message ResumeRunRequest {
  string tenant_id = 1;
  string run_id = 2;
  google.protobuf.Struct resume_data = 3;
}

// Cancel Workflow Run
message CancelRunRequest {
  string tenant_id = 1;
  string run_id = 2;
  string reason = 3;
}

// Send Signal to Workflow
message SignalRequest {
  string run_id = 1;
  string signal_name = 2;
  string target_node_id = 3;
  google.protobuf.Struct payload = 4;
}

// Query Workflow Runs
message QueryRunsRequest {
  string tenant_id = 1;
  optional string definition_id = 2;
  optional RunStatus status = 3;
  map<string, string> labels = 4;
  int32 page = 5;
  int32 size = 6;
}

message QueryRunsResponse {
  repeated RunResponse runs = 1;
  int32 page = 2;
  int32 size = 3;
  int64 total_elements = 4;
  bool has_more = 5;
}

// Get Execution History
message GetExecutionHistoryRequest {
  string tenant_id = 1;
  string run_id = 2;
}

message ExecutionHistoryResponse {
  string run_id = 1;
  repeated ExecutionEvent events = 2;
  int64 total_events = 3;
}

// Get Active Runs Count
message GetActiveRunsCountRequest { string tenant_id = 1; }

message CountResponse { int64 count = 1; }

// Stream Run Status
message StreamRunStatusRequest { repeated string run_ids = 1; }

message RunStatusUpdate {
  string run_id = 1;
  RunStatus status = 2;
  google.protobuf.Timestamp timestamp = 3;
  optional string error_message = 4;
}

// ============================================================================
// EXECUTOR MESSAGES
// ============================================================================

// Register Executor
message RegisterExecutorRequest {
  string executor_id = 1;
  string executor_type = 2;
  CommunicationType communication_type = 3;
  string endpoint = 4;
  map<string, string> metadata = 5;
  repeated string capabilities = 6;
  int32 max_concurrent = 7;
}

message ExecutorRegistration {
  string executor_id = 1;
  string status = 2;
  google.protobuf.Timestamp registered_at = 3;
}

// Unregister Executor
message UnregisterExecutorRequest { string executor_id = 1; }

// Heartbeat
message HeartbeatRequest {
  string executor_id = 1;
  map<string, string> metrics = 2;
}

// Stream Tasks
message StreamTasksRequest {
  string executor_id = 1;
  string executor_type = 2;
}

// Execution Task
message ExecutionTask {
  string task_id = 1;
  string run_id = 2;
  string node_id = 3;
  int32 attempt = 4;
  string execution_token = 5;
  google.protobuf.Struct context = 6;
  google.protobuf.Struct config = 7;
  optional int64 timeout_seconds = 8;
}

// Task Result
message TaskResult {
  string task_id = 1;
  string run_id = 2;
  string node_id = 3;
  int32 attempt = 4;
  TaskStatus status = 5;
  google.protobuf.Struct output = 6;
  optional ErrorInfo error = 7;
  string execution_token = 8;
}

// Bidirectional Streaming Messages
message ExecutorMessage {
  oneof message {
    HeartbeatRequest heartbeat = 1;
    TaskResult result = 2;
    TaskAck ack = 3;
  }
}

message EngineMessage {
  oneof message {
    ExecutionTask task = 1;
    TaskCancellation cancellation = 2;
    HealthCheck health_check = 3;
  }
}

message TaskAck {
  string task_id = 1;
  google.protobuf.Timestamp received_at = 2;
}

message TaskCancellation {
  string task_id = 1;
  string reason = 2;
}

message HealthCheck { google.protobuf.Timestamp timestamp = 1; }
